tests/compile_fail/no_comparison_2.rs
use cmpchain::chain;
fn main() { chain!(1 + 4 + 3); }